<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ksm_run"
        android:text="@string/ksm_run" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ksm_sleep_millisecs"
        android:text="@string/ksm_sleep_millisecs" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ksm_pages_to_scan"
        android:text="@string/ksm_pages_to_scan" />

    <TextView
        android:id="@+id/ksm_pages_shared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ksm_pages_shared" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ksm_pages_sharing"
        android:text="@string/ksm_pages_sharing" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ksm_pages_unshared"
        android:text="@string/ksm_pages_unshared" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ksm_pages_volatile"
        android:text="@string/ksm_pages_volatile" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ksm_full_scans"
        android:text="@string/ksm_full_scans" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ksm_pages_saved"
        android:text="@string/ksm_pages_saved" />
    
    <ProgressBar
    	android:id="@+id/ksm_pages_shared_ratio_progress_bar"
    	android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/progressbar_height"
        android:progress="0" 
        style="@android:style/Widget.ProgressBar.Horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ksm_pages_shared_ratio"
        android:text="@string/ksm_pages_shared_ratio" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/device_info"
        android:textIsSelectable="true" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kernel_version"
        android:textIsSelectable="true" />
        
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ram_available"
        android:textIsSelectable="true" />
    
</LinearLayout>